--- a/css/libbtc.css
+++ b/css/libbtc.css
@@ -1469,7 +1469,7 @@ body {
   line-height: 22px;
   font-family: "adelle", Georgia, "Times New Roman", serif;
   color: #4e443c;
-  background: #fff;
+  background: #f0efe7 url(/images/bg/body.jpg);
 }
 
 
