--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,12 +10,8 @@
     <!--[if (gte IE 6)&(lte IE 8)]>
       <script src='/javascripts/selectivizr-min.js' type='text/javascript'></script>
     <![endif]-->
-    <script src="//use.typekit.com/jsq2fql.js" type="text/javascript"></script>
-    <script>
-      //<![CDATA[
-        try{Typekit.load();}catch(e){}
-      //]]>
-    </script>
+    <script src="https://use.typekit.net/jtp3zyq.js"></script>
+    <script>try{Typekit.load({ async: true });}catch(e){}</script>
   </head>
   <body id='home'>
     <div class='inner'>
